@@ -13,6 +13,9 @@ Changes
 
 Fixes
 -----
+ 
+ - Fixed an issue that caused the tooltip to have a wrong position
+   in the Shards view. 
 
 2017/09/18 1.6.0
 ================
